terraform/layer3-k8s-manifests/yaml/deployments/main/ingress/elasticsearch-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: elasticsearch-ingress
  namespace: main
  
spec:
  entryPoints:
    - websecure  
  routes:
    - match: Host(`monitoring.open-innovation.com`) && Path(`/maines`)
      kind: Rule
      middlewares:
        - name: main-strip-prefix 
      services:
        - name: open-innovation-main-elasticsearch-es-http
          port: 9200
          scheme: https
          namespace: main
          serversTransport: main-traefik-servers-transport
  tls:
    secretName: http-tls
